--- a/app/src/main/res/layout/update_layout.xml
+++ b/app/src/main/res/layout/update_layout.xml
@@ -61,13 +61,14 @@
             android:hint="@string/fruitName"
             app:boxStrokeColor="@color/shadowblue"
             android:textColorHint="@color/grey"
-            android:id="@+id/firstname">
+            android:id="@+id/fruitnameLayout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                android:id="@+id/fruitName"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,7 +77,7 @@
             android:theme="@style/TextInputLayoutAppearance"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/firstname"
+            app:layout_constraintTop_toBottomOf="@id/fruitnameLayout"
             android:layout_marginStart="25dp"
             android:layout_marginEnd="25dp"
             android:layout_width="0dp"
@@ -92,10 +93,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                android:id="@+id/fruitPrice"/>
 
         </com.google.android.material.textfield.TextInputLayout>
-
 
 
         <com.google.android.material.button.MaterialButton
