--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff">
 
-    <com.example.myapplication.HorizontalCarouselRecyclerView
+    <com.example.myapplication.Utils.HorizontalCarouselRecyclerView
         android:id="@+id/item_list1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
