--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".orderAcivity"
+    tools:context=".activity.orderAcivity"
     android:background="#eeeeee">
 
     <RelativeLayout
@@ -300,7 +300,7 @@
             android:layout_height="match_parent"
             android:layout_below="@id/mostliked">
 
-            <!--com.example.myapplication.HorizontalCarouselRecyclerView
+            <!--com.example.myapplication.Utils.HorizontalCarouselRecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/mostliked"
@@ -315,7 +315,7 @@
                 android:id="@+id/item_list"
                 >
 
-            </com.example.myapplication.HorizontalCarouselRecyclerView-->
+            </com.example.myapplication.Utils.HorizontalCarouselRecyclerView-->
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/item_list"
