--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -12,20 +12,20 @@
             android:title="Edit Profile"/>
     </group>
 
-<!--    <item android:title="Others">-->
-<!--        <menu>-->
-<!--            <item-->
-<!--                android:id="@+id/share"-->
-<!--                android:icon="@drawable/ic_share_black_24dp"-->
-<!--                android:title="Share"/>-->
-<!--            <item-->
-<!--                android:id="@+id/rate_app"-->
-<!--                android:icon="@drawable/ic_stars_black_24dp"-->
-<!--                android:title="Rate App"/>-->
-<!--            <item-->
-<!--                android:id="@+id/app_info"-->
-<!--                android:icon="@drawable/ic_info_outline_black_24dp"-->
-<!--                android:title="App Info"/>-->
-<!--        </menu>-->
-<!--    </item>-->
+    <item android:title="Others">
+        <menu>
+            <item
+                android:id="@+id/share"
+                android:icon="@drawable/ic_share_black_24dp"
+                android:title="Share"/>
+            <item
+                android:id="@+id/rate_app"
+                android:icon="@drawable/ic_stars_black_24dp"
+                android:title="Rate App"/>
+            <item
+                android:id="@+id/app_info"
+                android:icon="@drawable/ic_info_outline_black_24dp"
+                android:title="App Info"/>
+        </menu>
+    </item>
 </menu>
