--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
-        android:background="@color/shadowblue"
+        android:background="@color/shadowDarkblue"
         android:id="@+id/header">
 
         <com.alexzh.circleimageview.CircleImageView
@@ -27,16 +27,17 @@
             app:view_selectedColor="@color/blue"
             app:view_backgroundColor="@color/colorAccent"
             app:view_borderColor="@color/blue"
-            android:id="@+id/profilepic"/>
+            android:id="@+id/user_profilepic"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="dorice89@gmail.com"
-            android:layout_below="@id/profilepic"
+            android:layout_below="@id/user_profilepic"
             android:textColor="@color/white"
             android:layout_marginBottom="5dp"
-            android:layout_marginStart="5dp"/>
+            android:layout_marginStart="5dp"
+            android:id="@+id/user_email"/>
     </RelativeLayout>
 
 </LinearLayout>
