--- a/app/src/main/res/layout/login_form.xml
+++ b/app/src/main/res/layout/login_form.xml
@@ -75,6 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/shadowblue"
+            android:inputType="textPassword"
             android:textColor="@color/grey"
             android:textSize="16sp"
             android:id="@+id/passWord"/>
