--- a/app/src/main/res/layout/registration_form.xml
+++ b/app/src/main/res/layout/registration_form.xml
@@ -137,6 +137,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:textColor="@color/grey"
             android:textSize="16sp"
             android:id="@+id/passwordTxt"/>
@@ -165,6 +166,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:textColor="@color/grey"
             android:textSize="16sp"
             android:id="@+id/confirmPasswordTxt"/>
