--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -10,7 +10,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="208dp"
-        android:background="@drawable/gradient"/>
+        android:background="@drawable/gradient"
+        android:id="@+id/background"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -182,9 +183,24 @@
         </RelativeLayout>
     </RelativeLayout>
 
-
-
     <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/gradient"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="10dp"
+        android:padding="5dp"
+        android:id="@+id/backLayout">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:tint="@color/white"
+            android:src="@drawable/ic_arrow_back_black_24dp"/>
+    </RelativeLayout>
+
+    <!--RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/relative1"
@@ -270,10 +286,9 @@
             android:layout_marginEnd="8dp"
             android:visibility="gone"/>
 
-    </RelativeLayout>
+    </RelativeLayout-->
 
-
-    <RelativeLayout
+    <!--RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/relative1"
@@ -300,7 +315,7 @@
             android:layout_height="match_parent"
             android:layout_below="@id/mostliked">
 
-            <!--com.example.myapplication.Utils.HorizontalCarouselRecyclerView
+            <com.example.myapplication.Utils.HorizontalCarouselRecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/mostliked"
@@ -315,7 +330,7 @@
                 android:id="@+id/item_list"
                 >
 
-            </com.example.myapplication.Utils.HorizontalCarouselRecyclerView-->
+            </com.example.myapplication.Utils.HorizontalCarouselRecyclerView>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/item_list"
@@ -329,7 +344,6 @@
 
         </LinearLayout>
 
-    </RelativeLayout>
-
+    </RelativeLayout-->
 
 </RelativeLayout>
