--- a/app/src/main/res/layout/login_form.xml
+++ b/app/src/main/res/layout/login_form.xml
@@ -113,6 +113,36 @@
 
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signup"
+        android:background="@drawable/shape_error_bg"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="5dp">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_report_black_24dp"
+                android:tint="@color/white"/>
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="@string/error_login"
+                android:textColor="@color/white" />
+        </LinearLayout>
+
+        </LinearLayout>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_button"
         style="@style/Widget.MaterialComponents.Button"
