--- a/app/src/main/res/anim/shake.xml
+++ b/app/src/main/res/anim/shake.xml
@@ -6,3 +6,12 @@
         android:repeatMode = "reverse"
         android:toXDelta = "3%"/>
 </set>
+
+<!--rotate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="100"
+    android:fromDegrees="-15"
+    android:pivotX="50%"
+    android:pivotY="50%"
+    android:repeatCount="infinite"
+    android:repeatMode="reverse"
+    android:toDegrees="15" /-->
