capture screen resolution

--- a/app/src/main/res/layout-w720dp-h1280dp/login_form.xml
+++ b/app/src/main/res/layout-w720dp-h1280dp/login_form.xml
@@ -11,7 +11,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:elevation="4dp"
         app:shape_arc_height="28dp"
         app:shape_arc_position="bottom"
@@ -37,7 +37,7 @@
         android:layout_width="0dp"
         app:layout_constraintWidth_percent="0.7"
         android:layout_height="wrap_content"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="180dp"
         android:hint="@string/hintUsername"
         app:boxStrokeColor="@color/shadowblue"
         android:textColorHint="@color/grey"
