--- a/app/src/main/res/layout-w640dp/login_form.xml
+++ b/app/src/main/res/layout-w640dp/login_form.xml
@@ -11,7 +11,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent="0.4"
         android:elevation="4dp"
         app:shape_arc_height="28dp"
         app:shape_arc_position="bottom"
