--- a/app/src/main/res/layout-w720dp-h1280dp/login_form.xml
+++ b/app/src/main/res/layout-w720dp-h1280dp/login_form.xml
@@ -166,6 +166,6 @@
         android:textSize="18sp"
         android:backgroundTint="@color/shadowblue"
         android:textColor="@color/white"
-        android:text="@string/loginTet"/>
+        android:text="LOGIN 2"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
