--- a/app/src/main/res/layout/login_form.xml
+++ b/app/src/main/res/layout/login_form.xml
@@ -11,7 +11,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent=".35"
         android:elevation="4dp"
         app:shape_arc_height="28dp"
         app:shape_arc_position="bottom"
@@ -158,7 +159,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/signup"
         app:elevation="8dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintWidth_percent="0.5"
