--- a/app/src/main/res/layout-w640dp/login_form.xml
+++ b/app/src/main/res/layout-w640dp/login_form.xml
@@ -128,7 +128,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/signup"
         android:background="@drawable/shape_error_bg"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/error_layout">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -167,6 +168,6 @@
         android:textSize="18sp"
         android:backgroundTint="@color/shadowblue"
         android:textColor="@color/white"
-        android:text="@string/loginTet"/>
+        android:text="LOGIN 3"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
