--- a/app/src/main/res/layout-small/login_form.xml
+++ b/app/src/main/res/layout-small/login_form.xml
@@ -34,157 +34,158 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image">
         <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image"
-        android:orientation="vertical">
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:theme="@style/TextInputLayoutAppearance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/image"
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
-            android:layout_width="0dp"
-            app:layout_constraintWidth_percent="0.7"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:hint="@string/hintUsername"
-            app:boxStrokeColor="@color/shadowblue"
-            android:textColorHint="@color/grey"
-            app:errorEnabled="true"
-            app:errorIconDrawable="@drawable/ic_report_black_24dp"
-            app:endIconTint="@color/red"
-            app:errorContentDescription="must not be empty"
-            android:id="@+id/usename">
+            android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:theme="@style/TextInputLayoutAppearance"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/image"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="25dp"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent="0.7"
                 android:layout_height="wrap_content"
-                android:textColor="@color/grey"
-                android:textSize="16sp"
-                android:id="@+id/userName"/>
+                android:layout_marginTop="5dp"
+                android:hint="@string/hintUsername"
+                app:boxStrokeColor="@color/shadowblue"
+                android:textColorHint="@color/grey"
+                app:errorEnabled="true"
+                app:errorIconDrawable="@drawable/ic_report_black_24dp"
+                app:endIconTint="@color/red"
+                app:errorContentDescription="must not be empty"
+                android:id="@+id/usename">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/grey"
+                    android:textSize="16sp"
+                    android:id="@+id/userName"/>
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:theme="@style/TextInputLayoutAppearance"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/usename"
-            android:layout_marginTop="1dp"
-            android:layout_width="0dp"
-            app:layout_constraintWidth_percent="0.7"
-            android:layout_height="wrap_content"
-            android:hint="@string/hintPassword"
-            android:textColorHint="@color/grey"
-            app:endIconMode="custom"
-            app:endIconDrawable="@drawable/ic_report_black_24dp"
-            app:endIconTint="@color/shadowblue"
-            app:errorEnabled="true"
-            app:boxCornerRadiusBottomEnd="4dp"
-            app:boxCornerRadiusBottomStart="4dp"
-            app:errorIconDrawable="@drawable/ic_report_black_24dp"
-            android:id="@+id/passwordLayout">
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:theme="@style/TextInputLayoutAppearance"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/usename"
+                android:layout_marginTop="1dp"
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent="0.7"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/shadowblue"
-                android:inputType="textPassword"
-                android:textColor="@color/grey"
-                android:textSize="16sp"
-                android:id="@+id/passWord"/>
+                android:hint="@string/hintPassword"
+                android:textColorHint="@color/grey"
+                app:endIconMode="custom"
+                app:endIconDrawable="@drawable/ic_report_black_24dp"
+                app:endIconTint="@color/shadowblue"
+                app:errorEnabled="true"
+                app:boxCornerRadiusBottomEnd="4dp"
+                app:boxCornerRadiusBottomStart="4dp"
+                app:errorIconDrawable="@drawable/ic_report_black_24dp"
+                android:id="@+id/passwordLayout">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/shadowblue"
+                    android:inputType="textPassword"
+                    android:textColor="@color/grey"
+                    android:textSize="16sp"
+                    android:id="@+id/passWord"/>
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            app:layout_constraintWidth_percent="0.65"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
-            android:layout_marginTop="1dp"
-            android:id="@+id/signup">
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="0dp"
+                app:layout_constraintWidth_percent="0.65"
                 android:layout_height="wrap_content"
-                android:textColor="@color/blue"
-                android:text="Sign Up"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                android:id="@+id/signupText"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/forgotPassword"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
+                android:layout_marginTop="1dp"
+                android:id="@+id/signup">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/gray"
-                android:text="Forgot password?"
-                android:textSize="12sp"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/forgotPassword"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/blue"
+                    android:text="Sign Up"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    android:id="@+id/signupText"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/forgotPassword"/>
 
-        </RelativeLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/gray"
+                    android:text="Forgot password?"
+                    android:textSize="12sp"
+                    android:layout_centerHorizontal="true"
+                    android:id="@+id/forgotPassword"/>
 
-        <LinearLayout
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_marginTop="15dp"
-            app:layout_constraintWidth_percent="0.7"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/signup"
-            android:background="@drawable/shape_error_bg"
-            android:orientation="horizontal">
+            </RelativeLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="gone"
-                android:padding="5dp"
-                android:id="@+id/login_error">
-                <ImageView
+                android:layout_width="0dp"
+                android:layout_marginTop="15dp"
+                app:layout_constraintWidth_percent="0.7"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/signup"
+                android:background="@drawable/shape_error_bg"
+                android:orientation="horizontal">
+
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_report_black_24dp"
-                    android:tint="@color/white"/>
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text="@string/error_login"
-                    android:textColor="@color/white" />
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:padding="5dp"
+                    android:id="@+id/login_error">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_report_black_24dp"
+                        android:tint="@color/white"/>
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="@string/error_login"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+
             </LinearLayout>
 
-        </LinearLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/login_button"
-            style="@style/Widget.MaterialComponents.Button"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/signup"
-            app:elevation="8dp"
-            android:layout_marginTop="50dp"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintWidth_percent="0.5"
-            app:layout_constraintHeight_percent="0.07"
-            android:textSize="18sp"
-            android:backgroundTint="@color/shadowblue"
-            android:textColor="@color/white"
-            android:text="@string/loginTet"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/login_button"
+                style="@style/Widget.MaterialComponents.Button"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/signup"
+                app:elevation="8dp"
+                android:layout_marginTop="50dp"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintWidth_percent="0.5"
+                app:layout_constraintHeight_percent="0.07"
+                android:textSize="18sp"
+                android:backgroundTint="@color/shadowblue"
+                android:textColor="@color/white"
+                android:text="@string/loginTet"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
